Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14539

[MSPAINT] Zoom out crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.9
    • Applications
    • None

    Description

      Hello,

      I've discovered a bug in mspaint. Zooming out a picture with width/height equal or less to 7px will cause paint to divide by zero resulting in a crash of the application.

      Build specifics are noted in the appcrash txt file attached to this report.

      Version: 0.4.9-dev-686

      Follow up to the merged fix;

      Retest 955048e: Crashes less frequently. However, there's a bug with zooming in and out manually after changing the canvas size. I've created a scenario where base image is 1x1 and I resize it to 100x100. After some attempts of zooming out it switches back to 1x1 and attempts to divide by zero again. I'll provide the drwtsn report in a moment.

      Attachments

        Activity

          People

            binarymaster Stas'M
            cernodile Cernodile
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: