base/applications/mspaint/winproc.cpp
@@ -6,6 +6,7 @@
  *              hPalWin, hToolSettings and hSelection
  * PROGRAMMERS: Benedikt Freisen
  *              Katayama Hirofumi MZ
+ *              Stanislav Motylkov
  */
 
 /* INCLUDES *********************************************************/
@@ -16,7 +17,7 @@
 
 /* FUNCTIONS ********************************************************/
 
-void
+BOOL
 zoomTo(int newZoom, int mouseX, int mouseY)
 {
     RECT clientRectScrollbox;
@@ -24,8 +25,14 @@ zoomTo(int newZoom, int mouseX, int mouseY)
     int x, y, w, h;
     scrollboxWindow.GetClientRect(&clientRectScrollbox);
     imageArea.GetClientRect(&clientRectImageArea);
-    w = clientRectImageArea.right * clientRectScrollbox.right / (clientRectImageArea.right * newZoom / toolsModel.GetZoom());
-    h = clientRectImageArea.bottom * clientRectScrollbox.bottom / (clientRectImageArea.bottom * newZoom / toolsModel.GetZoom());
+    w = clientRectImageArea.right * newZoom / toolsModel.GetZoom();
+    h = clientRectImageArea.bottom * newZoom / toolsModel.GetZoom();
+    if (!w || !h)
+    {
+        return FALSE;
+    }
+    w = clientRectImageArea.right * clientRectScrollbox.right / w;
+    h = clientRectImageArea.bottom * clientRectScrollbox.bottom / h;
     x = max(0, min(clientRectImageArea.right - w, mouseX - w / 2)) * newZoom / toolsModel.GetZoom();
     y = max(0, min(clientRectImageArea.bottom - h, mouseY - h / 2)) * newZoom / toolsModel.GetZoom();
 
@@ -38,6 +45,7 @@ zoomTo(int newZoom, int mouseX, int mouseY)
 
     scrollboxWindow.SendMessage(WM_HSCROLL, MAKEWPARAM(SB_THUMBPOSITION, x), 0);
     scrollboxWindow.SendMessage(WM_VSCROLL, MAKEWPARAM(SB_THUMBPOSITION, y), 0);
+    return TRUE;
 }
 
 void CMainWindow::alignChildrenToMainWindow()
